force-app/main/default/objects/Account/fields/Parking_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Parking_Capacity__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Parking Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>