force-app/main/default/objects/Account/fields/Partnership_Status__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Status__c</fullName>
    <description>Current status of the partnership with the training provider.</description>
    <label>Partnership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Probation</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>