force-app/main/default/objects/Account/fields/Patents_Held__c.field-meta.xml
<CustomField>
    <fullName>Patents_Held__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Patents Held</label>
    <length>255</length>
    <type>Text</type>
</CustomField>