force-app/main/default/objects/Account/fields/Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Provider__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Payroll Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>