force-app/main/default/objects/Account/fields/PCI_DSS_Compliance__c.field-meta.xml
<CustomField>
    <fullName>PCI_DSS_Compliance__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>PCI DSS Compliance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>