force-app/main/default/objects/Account/fields/Performance_Review_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Performance_Review_Cycle__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Performance Review Cycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>