force-app/main/default/objects/Account/fields/Philanthropy_Budget__c.field-meta.xml
<CustomField>
    <fullName>Philanthropy_Budget__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Philanthropy Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>