force-app/main/default/objects/Account/fields/Post_Grad_Employment_Rate__c.field-meta.xml
<CustomField>
    <fullName>Post_Grad_Employment_Rate__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Post Grad Employment Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>