force-app/main/default/objects/Account/fields/Preferred_Procurement_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Procurement_Vendor__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Preferred Procurement Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>