force-app/main/default/objects/Account/fields/Primary_Communication_Tool__c.field-meta.xml
<CustomField>
    <fullName>Primary_Communication_Tool__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Primary Communication Tool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>