force-app/main/default/objects/Account/fields/Primary_Research_Focus__c.field-meta.xml
<CustomField>
    <fullName>Primary_Research_Focus__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Primary Research Focus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>