force-app/main/default/objects/Account/fields/Primary_Target_Market__c.field-meta.xml
<CustomField>
    <fullName>Primary_Target_Market__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Primary Target Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>