force-app/main/default/objects/Account/fields/Product_Lines_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Lines_Count__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Product Lines Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>