force-app/main/default/objects/Account/fields/Public_Transit_Access__c.field-meta.xml
<CustomField>
    <fullName>Public_Transit_Access__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Public Transit Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>