force-app/main/default/objects/Account/fields/R_and_D_Budget__c.field-meta.xml
<CustomField>
    <fullName>R_and_D_Budget__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>R and D Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>