force-app/main/default/objects/Account/fields/Recent_Mergers__c.field-meta.xml
<CustomField>
    <fullName>Recent_Mergers__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Recent Mergers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>