force-app/main/default/objects/Account/fields/Remote_Work_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Remote_Work_Percentage__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Remote Work Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>