force-app/main/default/objects/Account/fields/Reporting_Dashboard_Type__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Dashboard_Type__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Reporting Dashboard Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>