force-app/main/default/objects/Account/fields/Research_Funding_Annual__c.field-meta.xml
<CustomField>
    <fullName>Research_Funding_Annual__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Research Funding Annual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>