force-app/main/default/objects/Account/fields/Retention_Rate__c.field-meta.xml
<CustomField>
    <fullName>Retention_Rate__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Retention Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>