force-app/main/default/objects/Account/fields/Revenue_Share_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_Percentage__c</fullName>
    <description>Percentage of revenue shared with the training provider.</description>
    <label>Revenue Share Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>