force-app/main/default/objects/Account/fields/Revenue_Share_Tier__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_Tier__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Revenue Share Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>