force-app/main/default/objects/Account/fields/Royalty_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Payment_Schedule__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Royalty Payment Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>