force-app/main/default/objects/Account/fields/School_Colors__c.field-meta.xml
<CustomField>
    <fullName>School_Colors__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>School Colors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>