force-app/main/default/objects/Account/fields/SCORM_Compliance_Level__c.field-meta.xml
<CustomField>
    <fullName>SCORM_Compliance_Level__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>SCORM Compliance Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>