force-app/main/default/objects/Account/fields/Secondary_Content_Format__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Content_Format__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Secondary Content Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>