force-app/main/default/objects/Account/fields/Setup_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Amount__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Setup Fee Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>