force-app/main/default/objects/Account/fields/SLA_Uptime_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>SLA_Uptime_Guarantee__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>SLA Uptime Guarantee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>