force-app/main/default/objects/Account/fields/SOC2_Compliance__c.field-meta.xml
<CustomField>
    <fullName>SOC2_Compliance__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>SOC2 Compliance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>