force-app/main/default/objects/Account/fields/Special_Education_Resources__c.field-meta.xml
<CustomField>
    <fullName>Special_Education_Resources__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Special Education Resources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>