force-app/main/default/objects/Account/fields/SSO_Implementation__c.field-meta.xml
<CustomField>
    <fullName>SSO_Implementation__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>SSO Implementation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>