force-app/main/default/objects/Account/fields/Standard_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Standard_Payment_Terms__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Standard Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>