force-app/main/default/objects/Account/fields/Storage_Limit_GB__c.field-meta.xml
<CustomField>
    <fullName>Storage_Limit_GB__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Storage Limit GB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>