force-app/main/default/objects/Account/fields/Student_Information_System__c.field-meta.xml
<CustomField>
    <fullName>Student_Information_System__c</fullName>
    <description>The primary Student Information System (SIS) used by the institution.</description>
    <label>Student Information System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>