force-app/main/default/objects/Account/fields/Student_to_Faculty_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Student_to_Faculty_Ratio__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Student to Faculty Ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>