force-app/main/default/objects/Account/fields/Study_Abroad_Programs__c.field-meta.xml
<CustomField>
    <fullName>Study_Abroad_Programs__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Study Abroad Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>