force-app/main/default/objects/Account/fields/Subject_Matter_Experts_Count__c.field-meta.xml
<CustomField>
    <fullName>Subject_Matter_Experts_Count__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Subject Matter Experts Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>