force-app/main/default/objects/Account/fields/Subsidiaries_Count__c.field-meta.xml
<CustomField>
    <fullName>Subsidiaries_Count__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Subsidiaries Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>