force-app/main/default/objects/Account/fields/Subtitle_Languages_Available__c.field-meta.xml
<CustomField>
    <fullName>Subtitle_Languages_Available__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Subtitle Languages Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>