force-app/main/default/objects/Account/fields/Supply_Chain_Locations__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain_Locations__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Supply Chain Locations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>