force-app/main/default/objects/Account/fields/Sustainability_Rating__c.field-meta.xml
<CustomField>
    <fullName>Sustainability_Rating__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Sustainability Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>