force-app/main/default/objects/Account/fields/Third_Party_Audits__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Audits__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Third Party Audits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>