force-app/main/default/objects/Account/fields/Total_Student_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Total_Student_Enrollment__c</fullName>
    <description>Total number of students enrolled at the institution.</description>
    <label>Total Student Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>