force-app/main/default/objects/Account/fields/Trademark_Count__c.field-meta.xml
<CustomField>
    <fullName>Trademark_Count__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Trademark Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>