force-app/main/default/objects/Account/fields/Training_Budget_Per_Employee__c.field-meta.xml
<CustomField>
    <fullName>Training_Budget_Per_Employee__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Training Budget Per Employee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>