force-app/main/default/objects/Account/fields/Transfer_Student_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Student_Percentage__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Transfer Student Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>