force-app/main/default/objects/Account/fields/Trial_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Trial_Period_Days__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Trial Period Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>