force-app/main/default/objects/Account/fields/Tuition_In_State__c.field-meta.xml
<CustomField>
    <fullName>Tuition_In_State__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Tuition In State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>