force-app/main/default/objects/Account/fields/Tuition_Reimbursement_Max__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Reimbursement_Max__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Tuition Reimbursement Max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>