force-app/main/default/objects/Account/fields/Unionized_Workforce__c.field-meta.xml
<CustomField>
    <fullName>Unionized_Workforce__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Unionized Workforce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>