force-app/main/default/objects/Account/fields/Veterans_Services__c.field-meta.xml
<CustomField>
    <fullName>Veterans_Services__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Veterans Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>