force-app/main/default/objects/Account/fields/Video_Hosting_Provider__c.field-meta.xml
<CustomField>
    <fullName>Video_Hosting_Provider__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Video Hosting Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>