force-app/main/default/objects/Account/fields/Vocational_Programs__c.field-meta.xml
<CustomField>
    <fullName>Vocational_Programs__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Vocational Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>