force-app/main/default/objects/Account/fields/Wellness_Program_Participation__c.field-meta.xml
<CustomField>
    <fullName>Wellness_Program_Participation__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Wellness Program Participation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>