force-app/main/default/objects/Account/fields/White_Label_Options__c.field-meta.xml
<CustomField>
    <fullName>White_Label_Options__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>White Label Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>