force-app/main/default/objects/Account/fields/Wifi_Coverage_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Wifi_Coverage_Percentage__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Wifi Coverage Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>