force-app/main/default/objects/Account/fields/xAPI_Support__c.field-meta.xml
<CustomField>
    <fullName>xAPI_Support__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>xAPI Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>