force-app/main/default/objects/Account/recordTypes/Training_Provider.recordType-meta.xml
<RecordType>
    <fullName>Training_Provider</fullName>
    <active>true</active>
    <description>For third-party content creators or partner organizations providing courses.</description>
    <label>Training Provider</label>
</RecordType>